<resources>
    <string name="app_name">CareCircleParentApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard\n</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="alerts">Alerts</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? </string>
    <string name="already_have_an_account_login">Already have an account?</string>
    <string name="today_s_usage">Today\'s Usage</string>
    <string name="family_dashboard">Family Dashboard</string>
    <string name="total_screen_time">Total Screen Time</string>
    <string name="most_used_app">Most Used App</string>
    <string name="screen_time">Screen Time</string>
    <string name="gaming">Gaming</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="screen_time_exceeded">Screen Time Exceeded</string>
    <string name="account">Account</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="manage_your_payment_methods">Manage your payment methods</string>
    <string name="devices">Devices</string>
    <string name="linked_devices">Linked Devices</string>
    <string name="app_preferences">App Preferences</string>
    <string name="app_settings">App Settings</string>
    <string name="manage_app_specific_settings">Manage app-specific settings</string>
    <string name="device_settings">Device Settings</string>
    <string name="daily_limit">Daily Limit</string>
    <string name="set_a_daily_limit_for_device_usage">Set a daily limit for device usage</string>
    <string name="schedule">Schedule</string>
    <string name="manage_times_the_device_can_be_used">Manage times the device can be used</string>
    <string name="manage_apps">Manage Apps</string>
    <string name="app_restrictions">App Restrictions</string>
    <string name="receive_alerts_for_potential_eye_strain">Receive alerts for potential eye strain</string>
    <string name="eye_strain_alerts">Eye Strain Alerts</string>
    <string name="features">Features</string>
    <string name="face_distance_monitoring">Face Distance Monitoring</string>
    <string name="get_notified_if_the_device_is_held_too_close">Get notified if the device is held too close</string>
    <string name="save_changes">Save Changes</string>
    <string name="block_or_limit_access_to_specific_apps">Block or limit access to specific apps</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="most_used_apps">Most Used Apps</string>
    <string name="social_media">Social Media</string>
    <string name="entertainment">Entertainment</string>
    <string name="games">Games</string>
    <string name="productivity">Productivity</string>
    <string name="real_time_view">Real-Time View</string>
    <string name="this_screen_is_being_monitored">This screen is being monitored</string>
    <string name="pause">Pause</string>
    <string name="screenshot">Screenshot</string>
    <string name="stop_monitoring">Stop Monitoring</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name\n</string>
    <string name="loading">loading..</string>
    <string name="top_used_apps">Top Used Apps</string>
    <string-array name="time_filters">
        <item>Today</item>
        <item>This Week</item>
    </string-array>
    <string name="no_data">No data available</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="start_monitoring">Start Monitoring</string>
    <string name="live">Live</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="select_child">Selected Child</string>
    <string name="allowed_usage_schedule">Allowed Usage Schedule</string>
    <string name="eye_strain_alert">Eye Strain Alert</string>
    <string name="face_distance_alert">Face Distance Alert</string>
    <string name="installed_apps">Installed Apps</string>
    <string name="add">Add</string>
    <string name="restrcited_apps">Restrcited Apps</string>
    <string name="link_new_child">Link New Child</string>
    <string name="enter_child_device_id">Enter Child Device ID</string>
    <string name="overall_usage">Overall Usage</string>
    <string name="lock_now">Lock Now</string>

</resources>